# mearm_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/mearm_launch/share/mearm_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mearm_launch/share/mearm_launch/cmake/: mearm_launchConfig-version.cmake  mearm_launchConfig.cmake
install/mearm_launch/share/mearm_launch/environment/: ament_prefix_path.dsv  path.dsv
install/mearm_model/share/mearm_model/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  rviz.rviz
install/mearm_model/share/mearm_model/cmake/: mearm_modelConfig-version.cmake  mearm_modelConfig.cmake
install/mearm_model/share/mearm_model/environment/: ament_prefix_path.dsv  path.dsv
install/mearm_model/share/mearm_model/launch/: display.launch.py  gazebo_launch.py  mearm_gazebo.launch.py  mearm_rviz.launch.py
install/mearm_model/share/mearm_model/meshes/: arm_0_base.stl  arm_0_left.stl  arm_0_right.stl  arm_1_connector.stl  arm_1_left.stl  arm_1_right.stl  base.stl  base_top.stl  column_base.stl  column_board.stl  column_connector.stl  column_left.stl  column_right.stl  gripper_base.stl  gripper_left.stl  (+3 more)
log/: latest_build
mearm_launch/: CMakeLists.txt  package.xml
src/mearm_model/: CMakeLists.txt
src/mearm_model/launch/: mearm_gazebo.launch.py
src/src/mearm_model/: package.xml
src/src/mearm_model/rviz/: urdf.rviz
(+5 files in other folders)
